--- a/src/assets/scss/typography.scss
+++ b/src/assets/scss/typography.scss
@@ -80,37 +80,29 @@ $red: #ff693b;
 /* DARK */
 .t-14-600-dark {
   @include text-style(14, 600, 18, $dark);
-  font-family: "Montserrat";
 }
 .t-14-500-dark {
   @include text-style(14, 500, 20, $dark);
-  font-family: "Montserrat";
 }
 .t-14-400-dark {
   @include text-style(14, 400, 20, $dark);
-  font-family: "Montserrat";
 }
 .t-12-500-dark {
   @include text-style(12, 500, 18, $dark);
-  font-family: "Montserrat";
 }
 .t-12-400-dark {
   @include text-style(12, 400, 18, $dark);
-  font-family: "Montserrat";
 }
 
 /* LIGHT-DARK */
 .t-16-600-light-dark {
   @include text-style(16, 600, 24, $light-dark);
-  font-family: "Montserrat";
 }
 .t-14-600-light-dark {
   @include text-style(14, 600, 20, $light-dark);
-  font-family: "Montserrat";
 }
 .t-12-400-light-dark {
   @include text-style(12, 400, 16, $light-dark);
-  font-family: "Montserrat";
 }
 
 /* GREEN-LIGHT */
@@ -119,6 +111,9 @@ $red: #ff693b;
 }
 
 /* RED */
+.t-14-500-red {
+  @include text-style(14, 500, 20, $red);
+}
 .t-12-500-red {
   @include text-style(12, 500, 18, $red);
 }
