--- a/src/app/shared/components/loading/loading.component.html
+++ b/src/app/shared/components/loading/loading.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="isLoading" class="loading-overlay">
   <div class="loading-spinner">
-    <img src="assets/images/logo.png" alt="Loading..." />
+    <img src="assets/icons/logo.svg" alt="Loading..." />
     <div class="t-12-600-white blinking-text">Cargando...</div>
   </div>
 </div>
