--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,4 +14,16 @@
 body {
   margin: 0;
   font-family: "Open Sans", "open-sans", sans-serif;
+  background: var(--hackett-background);
+}
+
+.p-button {
+  border-radius: 8px;
+  background: var(--hackett-primary);
+  border: transparent;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 16px;
+  width: 100%;
+  min-height: 36px;
 }
